<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        >
        <ImageView
            android:id="@+id/store_picture"
            android:layout_width="wrap_content"
            android:layout_height="264dp"
            android:src="@drawable/mike_petrucci_unsplash"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/store"
            />

        <TextView
            android:id="@+id/store_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/discount_games"
            android:textSize="32sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/store_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/store_description"
            />

        <TextView
            android:id="@+id/store_description"
            android:text="@string/store_description"
            app:layout_constraintTop_toBottomOf="@id/store_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/address_header"
            style="@style/text_body"
            />

        <TextView
            android:id="@+id/address_header"
            android:text="@string/address_header"
            app:layout_constraintTop_toBottomOf="@id/store_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/address"
            style="@style/header"
            />
        <TextView
            android:id="@+id/address"
            android:text="@string/address"
            app:layout_constraintTop_toBottomOf="@id/address_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/hours_header"
            style="@style/text_body"
            />

        <TextView
            android:id="@+id/hours_header"
            android:text="@string/hours_header"
            app:layout_constraintTop_toBottomOf="@id/address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/hours"
            style="@style/header"
            />

        <TextView
            android:id="@+id/hours"
            android:text="@string/hours"
            app:layout_constraintTop_toBottomOf="@id/hours_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/contact_header"
            style="@style/text_body"
            />

        <TextView
            android:id="@+id/contact_header"
            android:text="@string/contact_header"
            app:layout_constraintTop_toBottomOf="@id/hours"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/contact"
            style="@style/header"
            />

        <TextView
            android:id="@+id/contact"
            android:text="@string/contact"
            app:layout_constraintTop_toBottomOf="@id/contact_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/text_body"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>